# sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
include/sandbox/: CMakeLists.txt  example.hpp
source/sandbox/: CMakeLists.txt  main.cpp
test/source/: CMakeLists.txt  main.cpp
